# frappe_portal

./: README.md  pyproject.toml
.github/: stale.yml
.github/actions/setup/: action.yml
.github/helper/db/: mariadb.json  postgres.json
.github/workflows/: _base-migration.yml  _base-server-tests.yml  _base-type-check.yml  _base-ui-tests.yml  generate-pot-file.yml  initiate_release.yml  linters.yml  on_release.yml  publish-assets-develop.yml  run-indinvidual-tests.yml  server-tests.yml  tests.yml  type-check.yml  ui-tests.yml
frappe_portal/: hooks.py  modules.txt
frontend/: package.json  vite.config.js
frontend/src/: App.vue  router.js
